# phoenix_gui

./: .gitignore  Cargo.toml  README.md  build.nu  index.html
.github/workflows/: deploy.yaml
src/: data.rs  lib.rs  matrix.rs  neural_network.rs
src/data_sets/: blue_green.rs  mnist.rs  mod.rs
src/gui/: app.rs  file_viewer.rs  mod.rs  tabs.rs
src/gui/tab_types/: all_colors.rs  geometry.rs  image.rs  mod.rs  neural_network.rs  plot_file.rs  tcp_client.rs
src/gui/tab_types/plotter/: compiler.rs  functions.rs  mod.rs  parser.rs  precedence.rs  stack.rs  vm.rs
src/resources/: data3.txt  data_blue_green.txt
